...
"Address and Search" = "Address and Search";

/* Used as a button label for crash dialog prompt */
"Always Send" = "Always Send";

/* Tile title for Amazon */
"Amazon" = "Amazon";

/* Authentication prompt title */
"Authentication required" = "Authentication required";

/* Accessibility label for the Back button in the tab toolbar. */
"Back" = "Backwards";
...
"BreachAlerts.Title" = "Web Site Breach";

/* Accessibility label for brightness adjustment slider in Reader Mode display settings */
"Brightness" = "Brightness";

/* Label for Cancel button */
"Cancel" = "Cancel";

/* Accessibility hint for the color theme setting buttons in reader mode display settings */
"Changes color theme." = "Changes colour theme.";

/* Accessibility hint for the font type buttons in reader mode display settings */
"Changes font type." = "Changes font type.";
...
"ContextMenu.CopyLinkButtonTitle" = "Copy Link";

/* Context menu item for downloading a link URL */
"ContextMenu.DownloadLinkButtonTitle" = "Download Link";

/* Context menu item for opening a link in a new tab */
"ContextMenu.OpenInNewTabButtonTitle" = "Open in New Tab";

/* Context menu item for saving an image */
"ContextMenu.SaveImageButtonTitle" = "Save Image";

/* Context menu item for sharing a link URL */
"ContextMenu.ShareLinkButtonTitle" = "Share Link";
...
"ExternalLink.AppStore.ConfirmationTitle" = "Open this link in the App Store?";

/* Question shown to user when tapping an SMS or MailTo link that opens the external app for those. */
"ExternalLink.AppStore.GenericConfirmationTitle" = "Open this link in external app?";

/* Tile title for Facebook */
"Facebook" = "Facebook";

/* Title for Neeva about:home page in tab history list */
"Firefox.HomePage.Title" = "Neeva Home Page";

/* Accessibility Label for the tab toolbar Forward button */
"Forward" = "Forwards";
...
"FxA.OpenSyncPreferences" = "Open Sync Preferences";

/* Instructions shown on qr code scanning view */
"fxa.qr-scanning-view.instructions" = "Scan the QR code shown at firefox.com/pair";

/* Remove button is displayed on Neeva account page under certain scenarios where user would like to remove their account. */
"FxA.RemoveAccount" = "Remove";

/* Description string for alert view that gets presented when user tries to remove an account. */
"FxA.RemoveAccountAlertMessage" = "Remove the Neeva Account associated with this device to sign in as a different user.";

/* Remove account alert is the final confirmation before user removes their Neeva account */
"FxA.RemoveAccountAlertTitle" = "Remove Account";
...
"HomePanel.ContextMenu.Bookmark" = "Bookmark";

/* The title for the Delete from History context menu action for sites in Home Panels */
"HomePanel.ContextMenu.DeleteFromHistory" = "Delete from History";

/* The title for the Open in New Private Tab context menu action for sites in Home Panels */
"HomePanel.ContextMenu.OpenInNewPrivateTab" = "Open in New Private Tab";

/* The title for the Open in New Tab context menu action for sites in Home Panels */
"HomePanel.ContextMenu.OpenInNewTab" = "Open in New Tab";

/* The title for the Remove context menu action for sites in Home Panels */
"HomePanel.ContextMenu.Remove" = "Remove";

/* The title for the Remove Bookmark context menu action for sites in Home Panels */
"HomePanel.ContextMenu.RemoveBookmark" = "Remove Bookmark";

/* The title for the Share context menu action for sites in Home Panels */
"HomePanel.ContextMenu.Share" = "Share";

/* Label to display in the Discoverability overlay for keyboard shortcuts */
"Hotkeys.Back.DiscoveryTitle" = "Backwards";
...

/* Label for show search suggestions setting. */
"Show Search Suggestions" = "Show Search Suggestions";

/* Accessibility label for the tabs button in the (top) tab toolbar
   Accessibility Label for the tabs button in the tab toolbar */
"Show Tabs" = "Show Tabs";

/* Show the on-boarding screen again from the settings */
"Show Tour" = "Show Tour";

/* Accessibility Label for the tab toolbar Stop button */
"Stop" = "Stop";
...
"Welcome to your Reading List" = "Welcome to your Reading List";

/* Restore Tabs Prompt Title */
"Well, this is embarrassing." = "Well, this is embarrassing.";

/* Tile title for Wikipedia */
"Wikipedia" = "Wikipedia";

/* Relative date for yesterday. */
"yesterday" = "yesterday";

/* History tableview section header */
"Yesterday" = "Yesterday";
...
